# VortrixMath

./: .gitignore  Build.bat  BuildConfig.cfg  CMakeLists.txt  CleanBuild.bat
CMakeModules/: UnitTests.cmake  VortrixMath.cmake  VortrixPlayground.cmake
Playground/: Playground.h  main.cpp
Playground/Scenarios/: ScenarioManager.h  Vec3Scenarios.cpp  Vec3Scenarios.h  Vec4Scenarios.cpp  Vec4Scenarios.h
UnitTests/: Mat44Tests.cpp  QuatTests.cpp  TestCommon.h  Vec2Test.cpp  Vec3Tests.cpp  Vec4Tests.cpp  ViewProjTest.cpp  main.cpp
source/: Core.h  Mat44.cpp  Mat44.h  Mat44.inl  Quat.h  Quat.inl  ScalarMath.h  SimdUtil.h  Vec2.h  Vec2.inl  Vec3.h  Vec3.inl  Vec4.cpp  Vec4.h  Vec4.inl  ViewProjection.h  VortrixMaths.h  VxMath.h
tests/: CMakeLists.txt  Vec4Tests.cpp  main.cpp
